kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: monster-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: monster-app

  template:
    metadata:
      labels:
        app: monster-app

    spec:
      containers:
        - name: monster-app
          image: ghcr.io/danielye3005-a11y/monster-devops-app:latest
          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
