kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: monster-app-service

spec:
  selector:
    app: monster-app

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
