kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monster-app-ingress

spec:
  rules:
    - host: monster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monster-app-service
                port:
                  number: 80
